// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button keeps the container the same when switching between isLoading and not isLoading 1`] = `
.c7 {
  opacity: 1;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c0 > *:not(.c6) {
  opacity: 0 !important;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c2 {
  position: relative;
}

.c4 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #9FA2A5;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: #929599;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c5 {
  border-radius: 0.25em;
}

<div
  class=" c0"
  style="display: inline-block;"
>
  <button
    class=" c1"
    color="#9FA2A5"
    elevation="0"
    role="button"
    type="button"
  >
    <div
      class="c2 c3"
    >
      <svg
        class="c4 c5"
        height="0px"
        viewBox="0 0 0 0"
        width="0px"
      />
    </div>
  </button>
  <div
    class=" c6 c7"
  />
</div>
`;

exports[`Button keeps the container the same when switching between isLoading and not isLoading 2`] = `
.c7 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c8 > *:not(.c6) {
  opacity: 0 !important;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c2 {
  position: relative;
}

.c4 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #9FA2A5;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: #929599;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c5 {
  border-radius: 0.25em;
}

<div
  class=" c0"
  style="display: inline-block;"
>
  <button
    class=" c1"
    color="#9FA2A5"
    elevation="0"
    role="button"
    type="button"
  >
    Submit
    <div
      class="c2 c3"
    >
      <svg
        class="c4 c5"
        height="0px"
        viewBox="0 0 0 0"
        width="0px"
      />
    </div>
  </button>
  <div
    class=" c6 c7"
  />
</div>
`;

exports[`Button shows ButtonContainer ButtonVariant.fill 1`] = `
.c6 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c2 {
  position: relative;
}

.c4 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #9FA2A5;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: #929599;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c5 {
  border-radius: 0.25em;
}

<div>
  <div
    class=" c0"
    style="display: inline-block;"
  >
    <button
      class=" c1"
      color="#9FA2A5"
      elevation="0"
      role="button"
      type="button"
    >
      <div
        class="c2 c3"
      >
        <svg
          class="c4 c5"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
    <div
      class=" c6"
    />
  </div>
</div>
`;

exports[`Button shows ButtonContainer ButtonVariant.outline 1`] = `
.c6 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c2 {
  position: relative;
}

.c4 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid #9FA2A5;
  cursor: pointer;
  background-color: transparent;
  color: #9FA2A5;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c5 {
  border-radius: 0.25em;
}

<div>
  <div
    class=" c0"
    style="display: inline-block;"
  >
    <button
      class=" c1"
      color="#9FA2A5"
      elevation="0"
      role="button"
      type="button"
    >
      <div
        class="c2 c3"
      >
        <svg
          class="c4 c5"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
    <div
      class=" c6"
    />
  </div>
</div>
`;

exports[`Button shows ButtonContainer ButtonVariant.text 1`] = `
.c6 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c2 {
  position: relative;
}

.c4 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: transparent;
  color: #9FA2A5;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c5 {
  border-radius: 0.25em;
}

<div>
  <div
    class=" c0"
    style="display: inline-block;"
  >
    <button
      class=" c1"
      color="#9FA2A5"
      elevation="0"
      role="button"
      type="button"
    >
      <div
        class="c2 c3"
      >
        <svg
          class="c4 c5"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
    <div
      class=" c6"
    />
  </div>
</div>
`;

exports[`Button shows ButtonContainer with nondefault props variant and color 1`] = `
.c6 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c2 {
  position: relative;
}

.c4 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  -webkit-filter: drop-shadow(0rem 0.071rem 0.5rem rgba(20,22,31,0.397));
  filter: drop-shadow(0rem 0.071rem 0.5rem rgba(20,22,31,0.397));
  outline: 0 none;
  border: 1px solid #000;
  cursor: pointer;
  background-color: transparent;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: rgba(0,0,0,0.05);
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c5 {
  border-radius: 0.25em;
}

<div>
  <div
    class=" c0"
    style="display: inline-block;"
  >
    <button
      class=" c1"
      color="#000"
      elevation="2"
      role="button"
      type="button"
    >
      <div
        class="c2 c3"
      >
        <svg
          class="c4 c5"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
    <div
      class=" c6"
    />
  </div>
</div>
`;

exports[`Button shows LeftIconContainer when isProcessing 1`] = `
.c7 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c3 {
  position: relative;
}

.c5 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #9FA2A5;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: #929599;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c2 {
  height: 1rem;
  vertical-align: middle;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c6 {
  border-radius: 0.25em;
}

<div>
  <div
    class=" c0"
    style="display: inline-block;"
  >
    <button
      class=" c1"
      color="#9FA2A5"
      elevation="0"
      role="button"
      type="button"
    >
      <div
        class=" c2 "
      >
        <svg
          role="presentation"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
        >
          <style>
            @keyframes spin { to { transform: rotate(360deg) } }
          </style>
          <g
            style="animation: spin linear 1s infinite; transform-origin: center;"
          >
            <path
              d="M12,4V2A10,10 0 0,0 2,12H4A8,8 0 0,1 12,4Z"
              style="fill: currentColor;"
            />
            <rect
              fill="transparent"
              height="24"
              width="24"
            />
          </g>
        </svg>
      </div>
      <div
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
    <div
      class=" c7"
    />
  </div>
</div>
`;

exports[`Button shows icons 1`] = `
.c7 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c3 {
  position: relative;
}

.c5 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #9FA2A5;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: #929599;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c2 {
  height: 1rem;
  vertical-align: middle;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c6 {
  border-radius: 0.25em;
}

<div>
  <div
    class=" c0"
    style="display: inline-block;"
  >
    <button
      class=" c1"
      color="#9FA2A5"
      elevation="0"
      role="button"
      type="button"
    >
      <div
        class=" c2 "
      >
        <svg
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="mdiComment"
            style="fill: currentColor;"
          />
        </svg>
      </div>
      <div
        class=" c2 "
      >
        <svg
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="mdiComment"
            style="fill: currentColor;"
          />
        </svg>
      </div>
      <div
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
    <div
      class=" c7"
    />
  </div>
</div>
`;

exports[`Button shows icons with type string 1`] = `
.c7 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c3 {
  position: relative;
}

.c5 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #9FA2A5;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: #929599;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c2 {
  height: 1rem;
  vertical-align: middle;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c6 {
  border-radius: 0.25em;
}

<div>
  <div
    class=" c0"
    style="display: inline-block;"
  >
    <button
      class=" c1"
      color="#9FA2A5"
      elevation="0"
      role="button"
      type="button"
    >
      <div
        class=" c2 "
      >
        <svg
          role="presentation"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="mdiComment"
            style="fill: currentColor;"
          />
        </svg>
      </div>
      <div
        class=" c2 "
      >
        <svg
          role="presentation"
          style="width: 1rem; height: 1rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="mdiComment"
            style="fill: currentColor;"
          />
        </svg>
      </div>
      <div
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
    <div
      class=" c7"
    />
  </div>
</div>
`;

exports[`Button shows loading skeleton 1`] = `
.c7 {
  opacity: 1;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c0 > *:not(.c6) {
  opacity: 0 !important;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c2 {
  position: relative;
}

.c4 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #9FA2A5;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: #929599;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c5 {
  border-radius: 0.25em;
}

<div>
  <div
    class=" c0"
    style="display: inline-block;"
  >
    <button
      class=" c1"
      color="#9FA2A5"
      elevation="0"
      role="button"
      type="button"
    >
      <div
        class="c2 c3"
      >
        <svg
          class="c4 c5"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
    <div
      class=" c6 c7"
    />
  </div>
</div>
`;

exports[`Button shows loading text when provided 1`] = `
.c7 {
  opacity: 1;
  background: linear-gradient( 90deg, rgba(159,162,165,0.75), rgba(159,162,165,0.25), rgba(159,162,165,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c0 {
  display: block;
  position: relative;
}

.c0 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c0 > *:not(.c6) {
  opacity: 0 !important;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.c2 {
  position: relative;
}

.c4 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #9FA2A5;
  color: #000;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:hover {
  background-color: #929599;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c5 {
  border-radius: 0.25em;
}

<div>
  <div
    class=" c0"
    style="display: inline-block;"
  >
    <button
      class=" c1"
      color="#9FA2A5"
      elevation="0"
      role="button"
      type="button"
    >
      <div
        class="c2 c3"
      >
        <svg
          class="c4 c5"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
    </button>
    <div
      class=" c6 c7"
    />
  </div>
</div>
`;
